--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>CodeCats</title>
+    <title>Metameteora</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,25 +22,7 @@
           </a>
         </div>
         <div class="menu">
-          <a
-            href="https://discord.gg/A9CnsVzzkZ"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img src="images/header/discord.webp" alt="Discord" />
-          </a>
-          <a
-            href="https://twitter.com/CodeCats10k"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <img src="images/header/twitter.webp" alt="Twitter" />
-          </a>
-          <a
-            href="https://opensea.io/collection/codecats"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
+           
             <img src="images/header/opensea.webp" alt="Opensea" />
           </a>
           <button class="wallet-btn btn" id="connectWallet">
@@ -56,7 +38,7 @@
         <ul
           id="countdown"
           class="count-down"
-          data-date="Feb 17, 2022 4:00:00 PM UTC"
+          data-date="April 30, 2022 8:00:00 AM UTC"
         >
           <li class="clock-item">
             <span class="count-number days">20</span>
@@ -80,10 +62,7 @@
         </ul>
         <h1>NFT Drop Coming Soon!!</h1>
                
-        <p>A new batch of cute cats will be available very soon!</p>
-        <a href="https://discord.gg/A9CnsVzzkZ" target="_blank" rel="noopener noreferrer" class="hero-btn btn"
-          ><span>Join the Catmmunity</span>
-        </a>
+        <p>You don't choose music. The music chooses you!</p>
       </div>
     </section>
 
